hphp/hack/test/typecheck/coeffects/conformance/invalid_aliased_type.php
<?hh
class C {
  const type T = int;

  private function f()[this::T]: void {}
}
